--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -4,7 +4,7 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $browser = firefox
 $terminal = foot
-$fileManager = foot -e yazi
+$fileManager = foot --title=yazi yazi
 $menu = $HOME/.config/rofi/launchers/type-1/launcher.sh
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
@@ -150,7 +150,7 @@ bind = ,Print, exec, hyprshot -m output
 bind = SHIFT, Print, exec, hyprshot -m window -m active
 bind = $mainMod SHIFT, Print, exec, hyprshot -m region
 bind = Alt, E, exec, thunar
-bind = $mainMod, N, exec, foot -e nvim
+bind = $mainMod, N, exec, foot --title=nvim nvim
 bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu -theme catppuccin | cliphist decode | wl-copy
 
 # Switch workspaces with mainMod + [0-9]
