--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -15,6 +15,20 @@ exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec = $HOME/.config/hypr/wallpaper.sh
 
+# Environment variables 
+env = XCURSOR_SIZE,24
+env = XCURSOR_THEME,Catppuccin-Mocha-Sapphire
+env = HYPRCURSOR_THEME,Catppuccin-Mocha-Sapphire
+env = HYPRCURSOR_SIZE,24
+env = GTK_CURSOR_THEME_NAME,Catppuccin-Mocha-Sapphire
+env = GTK_THEME,Catppuccin-Mocha-Standard-Sapphire-Dark
+env = GTK_ICON_THEME,Papirus-Dark
+env = GTK_CURSOR_THEME_SIZE,24
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+
 # Appearance
 general {
     gaps_in = 5
