--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -9,10 +9,10 @@ $menu = $HOME/.config/rofi/launchers/type-1/launcher.sh
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = $HOME/.config/hypr/waybar.sh & dunst & hypridle
+exec-once = $HOME/.config/scripts/waybar.sh & dunst & hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-exec = $HOME/.config/hypr/wallpaper.sh
+exec = $HOME/.config/scripts/wallpaper.sh
 
 # Environment Variables
 env = HYPRCURSOR_THEME,catppuccin-mocha-sapphire-cursors
