--- a/dot_config/qt5ct/qt5ct.conf
+++ b/dot_config/qt5ct/qt5ct.conf
@@ -6,8 +6,8 @@ standard_dialogs=default
 style=kvantum-dark
 
 [Fonts]
-fixed="DejaVu LGC Sans,12,-1,5,50,0,0,0,0,0"
-general="DejaVu LGC Sans,12,-1,5,50,0,0,0,0,0"
+fixed="Noto Sans,12,-1,5,50,0,0,0,0,0,Regular"
+general="Noto Sans,12,-1,5,50,0,0,0,0,0,Regular"
 
 [Interface]
 activate_item_on_single_click=0
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xac\0\0\x3\xed\0\0\0\0\0\0\0\0\0\0\x3\xbf\0\0\x4\x5\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xac\0\0\x3\xed)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xa1\0\0\x3\xdf\0\0\0\0\0\0\0\0\0\0\x3\xa1\0\0\x3\xdf\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xa1\0\0\x3\xdf)
 
 [Troubleshooting]
 force_raster_widgets=1
