--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -19,7 +19,7 @@ exec = swww img $HOME/Pictures/catppuccin-city.png
 env = HYPRCURSOR_THEME,catppuccin-mocha-sapphire-cursors
 env = HYPRCURSOR_SIZE,24
 env = GTK_THEME.Catppuccin-Mocha-Standard-Sapphire-Dark
-env = GTK_ICON_THEME.Papirus-Dark
+env = GTK_ICON_THEME,Papirus-Dark
 env = GTK_CURSOR_THEME_SIZE,24
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt5ct
