--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -12,8 +12,7 @@ exec-once = systemctl --user start hyprpolkitagent
 exec-once = $HOME/.config/hypr/waybar.sh & dunst & hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-exec-once = swww-daemon
-exec = swww img $HOME/Pictures/mylivewallpapers-com-Porsche-911-City-Rain-4K.gif
+exec-once = hyprpaper
 
 # Environment Variables
 env = HYPRCURSOR_THEME,catppuccin-mocha-sapphire-cursors
