--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -9,7 +9,9 @@ $menu = $HOME/.config/rofi/launchers/type-1/launcher.sh
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = $HOME/.config/hypr/waybar.sh & dunst & hypridle
+exec-once = $HOME/.config/hypr/waybar.sh 
+exec-once = dunst 
+exec-once = hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec-once = hyprpaper
