--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -12,17 +12,14 @@ exec-once = systemctl --user start hyprpolkitagent
 exec-once = $HOME/.config/hypr/waybar.sh & dunst & hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-exec-once = hyprpaper
+exec = $HOME/.config/hypr/wallpaper.sh
 
 # Environment Variables
 env = HYPRCURSOR_THEME,catppuccin-mocha-sapphire-cursors
 env = HYPRCURSOR_SIZE,24
 env = GTK_THEME.Catppuccin-Mocha-Standard-Sapphire-Dark
-env = GTK_ICON_THEME,Papirus-Dark
-env = QT_QPA_PLATFORM,wayland;xcb
-env = QT_QPA_PLATFORMTHEME,qt5ct
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = GTK_ICON_THEME.Papirus-Dark
+env = GTK_CURSOR_THEME_SIZE,24
 
 # Appearance
 general {
