--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -8,6 +8,8 @@ $fileManager = foot --title=yazi yazi
 $menu = $HOME/.config/rofi/launchers/type-1/launcher.sh
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
+exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY
+exec-once = xdg-desktop-portal-hyprland
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = $HOME/.config/hypr/waybar.sh 
 exec-once = dunst
