--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -11,6 +11,7 @@ $menu = $HOME/.config/rofi/launchers/type-1/launcher.sh
 exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY
 exec-once = xdg-desktop-portal-hyprland
 exec-once = systemctl --user start hyprpolkitagent
+exec-once = gnome-keyring
 exec-once = $HOME/.config/hypr/waybar.sh 
 exec-once = dunst
 exec-once = hypridle
