--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -240,7 +240,7 @@ windowrulev2 = workspace 5, class:^(ONLYOFFICE)$
 windowrulev2 = workspace 5, class:^(libreoffice-writer)$
 windowrulev2 = workspace 6, class:^(steam)$
 windowrulev2 = workspace 6, class:^(heroic)$
-windowrulev2 = workspace 8, class:^(WebCord)$
+windowrulev2 = workspace 8, class:^(vesktop)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
