--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -13,11 +13,11 @@ exec-once = xdg-desktop-portal-hyprland
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = gnome-keyring
 exec-once = $HOME/.config/hypr/waybar.sh 
-exec-once = dunst
+exec-once = mako
 exec-once = hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-exec = $HOME/.config/hypr/wallpaper.sh
+exec = $HOME/.config/hypr/scripts/wallpaper.sh
 
 # Environment Variables
 env = HYPRCURSOR_THEME,catppuccin-mocha-sapphire-cursors
@@ -146,7 +146,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen,
 bind = $mainMod SHIFT, R, exec, hyprctl reload 
-bind = $mainMod SHIFT, P, exec, $HOME/.config/hypr/waybar.sh 
+bind = $mainMod SHIFT, P, exec, $HOME/.config/hypr/scripts/waybar.sh 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
