--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -8,7 +8,6 @@ $fileManager = foot --title=yazi yazi
 $menu = $HOME/.config/rofi/launchers/type-1/launcher.sh
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
-exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY
 exec-once = xdg-desktop-portal-hyprland
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = gnome-keyring
@@ -247,3 +246,6 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+# Screencasting
+exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY
