--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -16,7 +16,8 @@ exec-once = mako
 exec-once = hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-exec = $HOME/.config/hypr/scripts/wallpaper.sh
+exec-once = swww-daemon
+exec-once = swww img $HOME/Pictures/catppuccin-city.png --transition-step 255
 
 # Environment Variables
 env = HYPRCURSOR_THEME,catppuccin-mocha-sapphire-cursors
