--- a/dot_config/DankMaterialShell/settings.json
+++ b/dot_config/DankMaterialShell/settings.json
@@ -34,9 +34,9 @@
   "controlCenterShowAudioIcon": true,
   "showWorkspaceIndex": true,
   "showWorkspacePadding": true,
-  "showWorkspaceApps": false,
+  "showWorkspaceApps": true,
   "maxWorkspaceIcons": 3,
-  "workspacesPerMonitor": true,
+  "workspacesPerMonitor": false,
   "workspaceNameIcons": {},
   "waveProgressEnabled": true,
   "clockCompactMode": false,
@@ -47,23 +47,72 @@
   "lockDateFormat": "",
   "mediaSize": 1,
   "topBarLeftWidgets": [
-    "launcherButton",
-    "workspaceSwitcher",
-    "focusedWindow"
+    {
+      "id": "launcherButton",
+      "enabled": true
+    },
+    {
+      "id": "workspaceSwitcher",
+      "enabled": true
+    },
+    {
+      "id": "focusedWindow",
+      "enabled": true
+    }
   ],
   "topBarCenterWidgets": [
-    "music",
-    "clock",
-    "weather"
+    {
+      "id": "music",
+      "enabled": true
+    },
+    {
+      "id": "clock",
+      "enabled": true
+    },
+    {
+      "id": "weather",
+      "enabled": true
+    },
+    {
+      "id": "cpuTemp",
+      "enabled": true
+    },
+    {
+      "id": "gpuTemp",
+      "enabled": true,
+      "selectedGpuIndex": 0,
+      "pciId": "10de:2783"
+    }
   ],
   "topBarRightWidgets": [
-    "systemTray",
-    "clipboard",
-    "cpuUsage",
-    "memUsage",
-    "notificationButton",
-    "battery",
-    "controlCenterButton"
+    {
+      "id": "keyboard_layout_name",
+      "enabled": true
+    },
+    {
+      "id": "privacyIndicator",
+      "enabled": true
+    },
+    {
+      "id": "systemTray",
+      "enabled": true
+    },
+    {
+      "id": "clipboard",
+      "enabled": true
+    },
+    {
+      "id": "notificationButton",
+      "enabled": true
+    },
+    {
+      "id": "idleInhibitor",
+      "enabled": true
+    },
+    {
+      "id": "controlCenterButton",
+      "enabled": true
+    }
   ],
   "appLauncherViewMode": "list",
   "spotlightModalViewMode": "list",
@@ -84,7 +133,7 @@
   "dockAutoHide": false,
   "cornerRadius": 12,
   "notificationOverlayEnabled": false,
-  "topBarAutoHide": true,
+  "topBarAutoHide": false,
   "topBarOpenOnOverview": true,
   "topBarVisible": true,
   "topBarSpacing": 4,
