--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -21,9 +21,15 @@ exec-once = swww img $HOME/Pictures/catppuccin-city.png --transition-step 255
 # Environment Variables
 env = HYPRCURSOR_THEME,catppuccin-mocha-sapphire-cursors
 env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE,24
+env = XCURSOR_THEME,catppuccin-mocha-sapphire-cursors
 env = GTK_THEME.Catppuccin-Mocha-Standard-Sapphire-Dark
 env = GTK_ICON_THEME.Papirus-Dark
 env = GTK_CURSOR_THEME_SIZE,24
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 
 # Appearance
 general {
